# waveflow

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  waveflow.db
.circleci/: config.yml
.github/workflow/: actions.yml
.github/workflows/: actions.yml
migrations/2021-06-08-041152_create_users/: up.sql
migrations/2021-06-08-065706_create_workflows/: down.sql
scripts/: pack.mjs
server/: .env.example  Cargo.toml
server/.cargo/: config
server/migrations/2021-06-08-041152_create_users/: up.sql
server/migrations/2021-06-08-065706_create_workflows/: up.sql
server/migrations/2021-06-13-104340_create_workflow_history/: down.sql  up.sql
server/migrations/2021-06-14-175033_create_config/: down.sql  up.sql
server/src/: handlers.rs  lib.rs  main.rs  models.rs  repository.rs  schema.rs
server/src/actions/auth/: login.rs
server/src/actions/users/: create.rs  me.rs  mod.rs
server/src/actions/workflows/: create.rs  get_all.rs  mod.rs  trigger.rs
server/src/handlers/: mod.rs  users.rs  workflows.rs
server/src/handlers/auth/: login.rs
server/src/handlers/users/: create.rs  me.rs
server/src/handlers/workflows/: create.rs  get_all.rs  history.rs  mod.rs  trigger.rs
server/src/repository/: mod.rs  users.rs  workflow.rs  workflow_history.rs
src/: lib.rs  main.rs  models.rs  schema.rs
src/actions/auth/: login.rs
src/actions/users/: create.rs
src/actions/workflows/: create.rs  get_all.rs  hook.rs  mod.rs
www/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
www/src/: app.tsx  main.tsx
www/src/hooks/: forms.ts
(+9 files in other folders)
