[package]
name = "waveflow"
version = "0.1.0"
authors = ["adeyahya <adeyahyaprasetyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = "1.0.126"
serde_json = "1"
hmac = "0.11.0"
sha2 = "0.9.5"
hex = "0.4.3"
diesel = { version = "1.4.0", features = ["sqlite", "r2d2"] }
uuid = { version = "0.8", features = ["v4"] }
dotenv = "0.10"
r2d2 = "0.8"
env_logger = "0.8"
log = "0.4.14"
jwt = "0.14.0"
dirs = "3.0.2"
actix-files = "0.5.0"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]